prometheus-grafana/istio-ingress-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: o11y
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - pegasus-grafana.sevira.cloud
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - pegasus-grafana.sevira.cloud
      port:
        name: https-workloads
        number: 443
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: o11y
spec:
  gateways:
    - grafana-gateway
  hosts:
    - pegasus-grafana.sevira.cloud
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.o11y.svc.cluster.local
            port:
              number: 80
          weight: 100
