prometheus-grafana/istio-ingress-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-gateway
  namespace: o11y
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - pegasus-prometheus.pauloponciano.digital
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - pegasus-prometheus.pauloponciano.digital
      port:
        name: https-workloads
        number: 443
        protocol: HTTP
      tls:
        mode: PASSTHROUGH
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: o11y
spec:
  gateways:
    - prometheus-gateway
  hosts:
    - pegasus-prometheus.pauloponciano.digital
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-prometheus.o11y.svc.cluster.local
            port:
              number: 9090
          weight: 100
